--- a/custom-rule.json5
+++ b/custom-rule.json5
@@ -6,7 +6,7 @@
   version: 1,                    // 【必需】版本号，每次更新文件内容都要增加此值
   author: '你的名字',             // 作者信息
   // 【核心】更新链接：必须指向你GitHub仓库里这个文件的RAW地址
-  updateUrl: 'https://raw.githubusercontent.com/你的用户名/你的仓库名/main/gkd.json5',
+  updateUrl: 'https://raw.githubusercontent.com/843944105/-/refs/heads/main/custom-rule.json5',
   supportUri: 'https://github.com/你的用户名/你的仓库名/issues', // 问题反馈页
 
   // ============ 规则分类（可选） ============
