--- a/custom-rule.json5
+++ b/custom-rule.json5
@@ -1,47 +1,9 @@
 {
-  // ============ 【必需】订阅头信息 ============
-  // 这部分是解决 “miss subscription.id” 错误的关键
-  id: 10086,                     // 【必需】整个订阅文件的唯一ID，请修改为一个你自己的数字
-  name: '我的全局规则订阅',       // 【必需】订阅显示的名称
-  version: 1,                    // 【必需】版本号，每次更新文件内容都要增加此值
-  author: '你的名字',             // 作者信息
-  // 【核心】更新链接：必须指向你GitHub仓库里这个文件的RAW地址
-  updateUrl: 'https://raw.githubusercontent.com/843944105/-/refs/heads/main/custom-rule.json5',
-  supportUri: 'https://github.com/843944105/-/issues', // 问题反馈页
-
-  // ============ 规则分类（可选） ============
-  categories: ['功能类', '风险提示'],
-
-  // ============ 【核心】您的全局规则放在这里 ============
-  globalGroups: [
-    // 您之前编写的那个规则组，作为 globalGroups 数组的第一个元素
-    {
-      key: 999999999,
-      name: '识别提示点返回',
-      desc: '自动点击“返回”以关闭“设备风险”、“人气太旺”等提示页',
-      quickFind: true,
-      matchTime: 10000,
-      actionMaximum: 3,
-      resetMatch: 'activity',
-      rules: [
-        {
-          key: 0,
-          matches: [
-            '[text*="设备可能存在风险"][visibleToUser=true]',
-            '[text*="人气太旺"][visibleToUser=true]',
-            '[text*="访问被拒绝"][visibleToUser=true]',
-            '[text*="当前网络可能存在风险"][visibleToUser=true]'
-          ],
-          action: 'clickNode',
-          // 请重点检查并确认此选择器在您的设备上能匹配到“返回”按钮
-          actionTarget: '[desc*="返回"][visibleToUser=true], [text*="返回"][visibleToUser=true]'
-        }
-      ]
-    }
-    // 您可以在此处添加更多的全局规则组...
-  ],
-
-  // ============ 应用规则列表（可选） ============
-  // 如果您还有针对特定APP的规则，可以放在这个 apps 数组中
-  apps: []
+  "id": 10086,
+  "name": "测试订阅",
+  "version": 1,
+  "author": "测试",
+  "updateUrl": "https://raw.githubusercontent.com/你的用户名/你的仓库名/main/gkd.json5",
+  "globalGroups": [],
+  "apps": []
 }
