--- a/custom-rule.json5
+++ b/custom-rule.json5
@@ -1,20 +1,16 @@
 {
   "id": 10086,
   "name": "我的自动处理规则",
-  "version": 1,
+  "version": 2,
   "author": "你的名字",
-  // 【重要】这是订阅自身的更新链接，必须指向这个文件本身
   "updateUrl": "https://github.com/843944105/-/raw/refs/heads/main/custom-rule.json5",
   "supportUri": "https://github.com/843944105/-/issues",
   "categories": ["功能类", "风险提示"],
-
-  // ============ 全局规则 ============
-  // 这里放置对所有应用生效的规则
   "globalGroups": [
     {
       "key": 999999999,
       "name": "识别提示点返回",
-      "desc": "自动点击“返回”以关闭“设备风险”、“人气太旺”等提示页",
+      "desc": "自动点击'返回'以关闭'设备风险'、'人气太旺'等提示页",
       "quickFind": true,
       "matchTime": 10000,
       "actionMaximum": 3,
@@ -22,7 +18,6 @@
       "rules": [
         {
           "key": 0,
-          // 当屏幕出现以下任何文字时触发
           "matches": [
             "[text*=\"设备可能存在风险\"][visibleToUser=true]",
             "[text*=\"人气太旺\"][visibleToUser=true]",
@@ -30,31 +25,11 @@
             "[text*=\"当前网络可能存在风险\"][visibleToUser=true]",
             "[text*=\"安全验证\"][visibleToUser=true]"
           ],
-          // 触发后，自动点击“返回”按钮
           "action": "clickNode",
-          // 目标按钮：匹配描述或文字包含“返回”的可见元素
           "actionTarget": "[desc*=\"返回\"][visibleToUser=true], [text*=\"返回\"][visibleToUser=true]"
         }
       ]
     }
-    // 你可以在这里继续添加其他全局规则组
   ],
-
-  // ============ 应用特定规则 ============
-  // 这里放置只对特定APP生效的规则，按包名区分
-  "apps": [
-    // 示例：针对淘宝的规则
-    // {
-    //   "id": "com.taobao.taobao",
-    //   "name": "淘宝",
-    //   "groups": [
-    //     {
-    //       "key": 0,
-    //       "name": "订单确认弹窗",
-    //       "rules": "[id=\"com.taobao.taobao:id/close_button\"]"
-    //     }
-    //   ]
-    // }
-    // 你可以在此处添加更多应用...
-  ]
+  "apps": []
 }
