--- a/custom-rule.json5
+++ b/custom-rule.json5
@@ -1,1 +1,71 @@
-{"id":10086,"name":"我的自动处理规则","version":2,"author":"843944105","updateUrl":"https://raw.githubusercontent.com/843944105/-/refs/heads/main/custom-rule.json5","checkUpdateUrl":"https://raw.githubusercontent.com/843944105/-/refs/heads/main/custom-rule.json5","supportUri":"https://github.com/843944105/-/issues","categories":["功能类","风险提示"],"globalGroups":[{"key":999999999,"name":"识别提示点返回","desc":"自动点击'返回'以关闭'设备风险'、'人气太旺'等提示页","quickFind":true,"matchTime":10000,"actionMaximum":3,"resetMatch":"activity","rules":[{"key":0,"matches":["[text*=\"设备可能存在风险\"][visibleToUser=true]","[text*=\"人气太旺\"][visibleToUser=true]","[text*=\"访问被拒绝\"][visibleToUser=true]","[text*=\"当前网络可能存在风险\"][visibleToUser=true]","[text*=\"安全验证\"][visibleToUser=true]"],"action":"clickNode","actionTarget":"[desc*=\"返回\"][visibleToUser=true], [text*=\"返回\"][visibleToUser=true]"}]}],"apps":[{"id":"com.eg.android.AlipayGphone","name":"支付宝","groups":[{"key":0,"name":"访问被拒绝提示-返回","desc":"支付宝登录页面出现访问被拒绝提示时，自动点击左上角返回按钮","quickFind":true,"activityIds":"com.eg.android.AlipayGphone.AlipayLogin","rules":[{"key":0,"matches":["[text=\"访问被拒绝\"]","[text=\"请检查是否使用了代理软件或VPN\"]"]},{"preKeys":[0],"key":1,"matches":"[id=\"com.alipay.mobile.antui:id/back_button\"]","action":"click"}],"snapshotUrls":[]}]}]}
+{
+ "id": 10086,
+ "name": "我的自动处理规则",
+ "version": 2,
+ "author": "843944105",
+ "updateUrl": "https://raw.githubusercontent.com/843944105/-/refs/heads/main/custom-rule.json5",
+ "checkUpdateUrl": "https://raw.githubusercontent.com/843944105/-/refs/heads/main/custom-rule.json5",
+ "supportUri": "https://github.com/843944105/-/issues",
+ "categories": [
+  "功能类",
+  "风险提示"
+ ],
+ "globalGroups": [
+  {
+   "key": 999999999,
+   "name": "识别提示点返回",
+   "desc": "自动点击'返回'以关闭'设备风险'、'人气太旺'等提示页",
+   "quickFind": true,
+   "matchTime": 10000,
+   "actionMaximum": 3,
+   "resetMatch": "activity",
+   "rules": [
+    {
+     "key": 0,
+     "matches": [
+      "[text*=\"设备可能存在风险\"][visibleToUser=true]",
+      "[text*=\"人气太旺\"][visibleToUser=true]",
+      "[text*=\"访问被拒绝\"][visibleToUser=true]",
+      "[text*=\"当前网络可能存在风险\"][visibleToUser=true]",
+      "[text*=\"安全验证\"][visibleToUser=true]"
+     ],
+     "action": "clickNode",
+     "actionTarget": "[desc*=\"返回\"][visibleToUser=true], [text*=\"返回\"][visibleToUser=true]"
+    }
+   ]
+  }
+ ],
+ "apps": [
+  {
+   "id": "com.eg.android.AlipayGphone",
+   "name": "支付宝",
+   "groups": [
+    {
+     "key": 0,
+     "name": "访问被拒绝提示-返回",
+     "desc": "支付宝登录页面出现访问被拒绝提示时，自动点击左上角返回按钮",
+     "quickFind": true,
+     "activityIds": "com.eg.android.AlipayGphone.AlipayLogin",
+     "rules": [
+      {
+       "key": 0,
+       "matches": [
+        "[text=\"访问被拒绝\"]",
+        "[text=\"请检查是否使用了代理软件或VPN\"]"
+       ]
+      },
+      {
+       "preKeys": [
+        0
+       ],
+       "key": 1,
+       "matches": "[id=\"com.alipay.mobile.antui:id/back_button\"]",
+       "action": "click"
+      }
+     ],
+     "snapshotUrls": []
+    }
+   ]
+  }
+ ]
+}
