--- a/custom-rule.json5
+++ b/custom-rule.json5
@@ -1,7 +1,7 @@
 {
  "id": 233,
- "name": "支付宝风险提示跳过",
- "version": 1,
+ "name": "支付宝自动跳过",
+ "version": 2,
  "author": "843944105",
  "updateUrl": "https://raw.githubusercontent.com/843944105/-/refs/heads/main/gkd.json5",
  "checkUpdateUrl": "https://raw.githubusercontent.com/843944105/-/refs/heads/main/gkd.json5",
@@ -16,24 +16,17 @@
    "name": "支付宝",
    "groups": [
     {
-     "key": 0,
-     "name": "登录页-访问被拒绝提示",
+     "key": 100,
+     "name": "自动返回-访问被拒绝",
      "desc": "支付宝登录页面出现'访问被拒绝'提示时，自动点击左上角返回按钮",
      "activityIds": [
       "com.eg.android.AlipayGphone.AlipayLogin"
      ],
      "rules": [
       {
-       "key": 0,
-       "matches": "[text=\"访问被拒绝\"]"
-      },
-      {
-       "preKeys": [
-        0
-       ],
-       "key": 1,
-       "matches": "[id=\"com.alipay.mobile.antui:id/back_button\"]",
-       "action": "click"
+       "matches": "[text='访问被拒绝']",
+       "action": "clickNode",
+       "actionTarget": "[id='com.alipay.mobile.antui:id/back_button']"
       }
      ]
     }
