--- a/custom-rule.json5
+++ b/custom-rule.json5
@@ -1,36 +1,77 @@
 {
- "id": 233,
- "name": "支付宝自动跳过",
- "version": 2,
- "author": "843944105",
- "updateUrl": "https://raw.githubusercontent.com/843944105/-/refs/heads/main/gkd.json5",
- "checkUpdateUrl": "https://raw.githubusercontent.com/843944105/-/refs/heads/main/gkd.json5",
- "supportUri": "https://github.com/843944105/-/issues",
- "categories": [
-  "功能类"
- ],
- "globalGroups": [],
- "apps": [
-  {
-   "id": "com.eg.android.AlipayGphone",
-   "name": "支付宝",
-   "groups": [
+  // 订阅ID，基于时间戳
+  id: 1767033328744,
+  
+  // 规则组名称
+  name: '支付宝访问被拒绝提示',
+  
+  // 规则组描述
+  desc: '自动关闭支付宝的代理/VPN检测提示',
+  
+  // 应用包名
+  appId: 'com.eg.android.AlipayGphone',
+  
+  // 活动ID
+  activityIds: [
+    'com.eg.android.AlipayGphone.AlipayLogin'
+  ],
+  
+  // 规则列表
+  rules: [
     {
-     "key": 100,
-     "name": "自动返回-访问被拒绝",
-     "desc": "支付宝登录页面出现'访问被拒绝'提示时，自动点击左上角返回按钮",
-     "activityIds": [
-      "com.eg.android.AlipayGphone.AlipayLogin"
-     ],
-     "rules": [
-      {
-       "matches": "[text='访问被拒绝']",
-       "action": "clickNode",
-       "actionTarget": "[id='com.alipay.mobile.antui:id/back_button']"
-      }
-     ]
+      // 规则键值
+      key: 0,
+      
+      // 规则描述
+      desc: '点击返回按钮关闭访问被拒绝提示',
+      
+      // 匹配条件（使用逻辑AND）
+      matches: [
+        // 标题必须是"提示"
+        "[id='com.alipay.mobile.antui:id/title_text'][text='提示']",
+        // 内容必须是"访问被拒绝"
+        "[id='com.alipay.android.phone.thirdparty:id/title'][text='访问被拒绝']"
+      ],
+      
+      // 执行动作
+      action: 'click',
+      
+      // 动作节点
+      actionNodes: [
+        {
+          // 点击返回按钮
+          matches: "[id='com.alipay.mobile.antui:id/back_button'][desc='返回']",
+          // 点击位置：中心
+          position: 'center'
+        }
+      ],
+      
+      // 是否截图（用于调试）
+      snapshot: true,
+      
+      // 执行优先级（可选）
+      // order: 0,
+      
+      // 触发频率限制（可选，单位：毫秒）
+      // actionDelay: 300,
+      
+      // 快速匹配（可选，提升性能）
+      // quickFind: true
     }
-   ]
-  }
- ]
+  ],
+  
+  // 版本号
+  version: 1,
+  
+  // 作者信息（可选）
+  // author: 'Your Name',
+  
+  // 更新时间（可选）
+  // updateTime: '2024-02-29',
+  
+  // 支持的应用版本（可选）
+  // appVersion: '10.6.6.8000',
+  
+  // 支持的设备（可选）
+  // supportedDevices: ['HUAWEI ELE-AL00']
 }
